tests/ui/reachable/unreachable-code.stderr
error: unreachable statement
  --> $DIR/unreachable-code.rs:7:3
   |
LL |   loop{}
   |   ------ any code following this expression is unreachable
LL |
LL |   let a = 3;
   |   ^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/unreachable-code.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

