tests/ui/reachable/unreachable-code.rs
#![deny(unreachable_code)]
#![allow(unused_variables)]

fn main() {
  loop{}

  let a = 3; //~ ERROR: unreachable statement
}
